objects/EUR_CRM_Region__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON TRADE</fullName>
                </value>
                <value>
                    <fullName>OFF TRADE</fullName>
                </value>
                <value>
                    <fullName>ON Trade &amp; OFF Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>RIGHT(LEFT(RecordType.DeveloperName,6),2)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region_Code__c</fullName>
        <label>Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region_Name_English__c</fullName>
        <label>Region Name (English)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Region (EU)</label>
    <listViews>
        <fullName>EUR_AO_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_AO_Region</value>
        </filters>
        <label>EUR AO Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_All_DE_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Region_Name_English__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_DE_Region</value>
        </filters>
        <label>EUR DE Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_BE_Region</value>
        </filters>
        <label>EUR BE Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_Regions_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_BG_Region</value>
        </filters>
        <label>EUR BG Regions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_CH_Region</value>
        </filters>
        <label>EUR CH Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Regions_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_PT_Region</value>
        </filters>
        <label>EUR PT All Regions View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_DK_Region</value>
        </filters>
        <label>EUR DK Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_FI_Region</value>
        </filters>
        <label>EUR FI Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_GB_Region</value>
        </filters>
        <label>EUR GB Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_KE_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_KE_Region</value>
        </filters>
        <label>EUR KE Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_KE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_MA_Region</value>
        </filters>
        <label>EUR MA Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_NG_Region</value>
        </filters>
        <label>EUR NG Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Region</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Region_Code__c</columns>
        <columns>EUR_CRM_Region_Owner__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Region_Name_English__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Region__c.EUR_RU_Region</value>
        </filters>
        <label>EUR RU Region</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Region</fullName>
        <active>true</active>
        <description>EUR SSA Angola Region</description>
        <label>AO Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Region</fullName>
        <active>true</active>
        <label>EUR BE Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Region</fullName>
        <active>true</active>
        <label>EUR BG Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Region</fullName>
        <active>true</active>
        <label>EUR CH Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CZ_Region</fullName>
        <active>true</active>
        <label>CZ Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Region</fullName>
        <active>true</active>
        <label>DE Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Region</fullName>
        <active>true</active>
        <description>Record Type for DK Regions</description>
        <label>EUR DK Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Region</fullName>
        <active>true</active>
        <description>EUR EE Region</description>
        <label>EE Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Region</fullName>
        <active>true</active>
        <label>FI Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Region</fullName>
        <active>true</active>
        <label>GB Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Region</fullName>
        <active>true</active>
        <label>KE Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Region</fullName>
        <active>true</active>
        <description>EUR LT Region</description>
        <label>LT Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Region</fullName>
        <active>true</active>
        <description>EUR LV Region</description>
        <label>LV Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Region</fullName>
        <active>true</active>
        <label>EUR MA Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Region</fullName>
        <active>true</active>
        <label>NG Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Region</fullName>
        <active>true</active>
        <label>EUR PT Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Region</fullName>
        <active>true</active>
        <label>EUR RU Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_SK_Region</fullName>
        <active>true</active>
        <label>SK Region</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>